Reports, mails y quitar opciones - SCM.N-002083 BAS GDF #72705, #72694, #72705 y #72685

--- a/features/bde/lib/Baseliner/I18N/es.po
+++ b/features/bde/lib/Baseliner/I18N/es.po
@@ -24,3 +24,6 @@ msgstr "Actualización de usuarios LDIF finalizada con éxito"
 msgid "Notify when an error acurred during reports generation"
 msgstr "Notificar cuando se produzca un error durante la generación de errores"
 
+msgid "The job haven't got any element"
+msgstr "El Job no tiene elementos"
+
