--- a/features/changeman/lib/Baseliner/I18N/es.po
+++ b/features/changeman/lib/Baseliner/I18N/es.po
@@ -310,3 +310,6 @@ msgstr "Elementos z/OS de uso general con DB2"
 
 msgid "zos.db2"
 msgstr "Elementos z/OS con DB2"
+
+msgid "Deleted package"
+msgstr "Paquete borrado en Changeman"
