--- a/lib/Baseliner/I18N/es.po
+++ b/lib/Baseliner/I18N/es.po
@@ -4112,3 +4112,6 @@ msgstr "Finalizado con error durante el Rollback"
 msgid "Unknown %1"
 msgstr "Desconocido (%1)"
 
+msgid "All projects"
+msgstr "Todos los proyectos"
+
